--- a/index.html
+++ b/index.html
@@ -222,6 +222,14 @@
 
   <section class="section">
     <h2>Приєднатись</h2>
+    <div style="max-width: 385px;">
+      <script async src="https://telegram.org/js/telegram-widget.js?22"
+              data-telegram-post="toolmate_comunity/11"
+              data-userpic="true"
+              data-width="100%">
+      </script>
+    </div>
+    <br><br>
     <span class="tooltip" data-tooltip="Буде доступний 20го числа">
       <span class="btn disabled">Запустити бот</span>
     </span>
