--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       margin: 0;
       font-family: monospace;
       background-color: #fdfcf9;
+      background: #fdfcf9;
       color: #222;
       line-height: 1.6;
     }
