--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             <div class="progress-bar" id="progress-bar"></div>
         </div>
     </section>
-    <span class="tooltip" data-tooltip="Буде доступний 20го числа">
+    <span class="tooltip" data-tooltip="Буде доступний 20го червня">
       <span class="btn disabled">Запустити бот</span>
     </span>
     <p style="margin-top: 1rem; font-size: 0.9rem;">Реліз — 20 червня • Перші 5 отримають бонуси</p>
@@ -231,7 +231,7 @@
       </script>
     </div>
     <br><br>
-    <span class="tooltip" data-tooltip="Буде доступний 20го числа">
+    <span class="tooltip" data-tooltip="Буде доступний 20го червня">
       <span class="btn disabled">Запустити бот</span>
     </span>
     <br><br>
