--- a/index.html
+++ b/index.html
@@ -1,10 +1,41 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="UTF-8">
+   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="./assets/images/icon.png">
-  <title>Toolmate — Оренда інструментів</title>
+
+  <!-- SEO Title -->
+  <title>Toolmate — Оренда інструментів у твоєму місті</title>
+
+  <!-- Description for search engines -->
+  <meta name="description" content="Toolmate — здавай та орендуй інструменти просто. Без фейків, без посередників. Локально, через Telegram. Працює з 20 червня.">
+
+  <!-- Keywords -->
+  <meta name="keywords" content="оренда інструментів, інструмент напрокат, взяти перфоратор, аренда інструменту Україна, Toolmate, телеграм оренда, оренда шуруповерта, інструмент Івано-Франківськ, оренда перфоратора">
+
+  <!-- Author -->
+  <meta name="author" content="Toolmate">
+
+  <!-- Open Graph for social previews -->
+  <meta property="og:title" content="Toolmate — Оренда інструментів">
+  <meta property="og:description" content="Платформа для оренди справжніх інструментів. Працює з 20 червня. Локально. Через Telegram.">
+  <meta property="og:image" content="https://toolmate.site/assets/images/share.png">
+  <meta property="og:url" content="https://toolmate.site/">
+  <meta property="og:type" content="website">
+  <meta property="og:locale" content="uk_UA">
+
+  <!-- Twitter Cards (опційно) -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Toolmate — Оренда інструментів">
+  <meta name="twitter:description" content="Локальна оренда інструментів між людьми. Через Telegram. Без фейків.">
+  <meta name="twitter:image" content="https://toolmate.site/assets/images/share.png">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://toolmate.site/">
+
+  <!-- Robots -->
+  <meta name="robots" content="index, follow">
   <style>
     body {
       margin: 0;
