--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="description" content="Toolmate — здавай та орендуй інструменти просто. Без фейків, без посередників. Локально, через Telegram. Працює з 20 червня.">
 
   <!-- Keywords -->
-  <meta name="keywords" content="оренда інструментів, інструмент напрокат, взяти перфоратор, аренда інструменту Україна, Toolmate, телеграм оренда, оренда шуруповерта, інструмент Івано-Франківськ, оренда перфоратора">
+  <meta name="keywords" content="оренда інструментів, інструмент напрокат, взяти перфоратор, оренда інструменту Україна, Toolmate, телеграм оренда, оренда шуруповерта, оренда верстатів, інструмент Івано-Франківськ, оренда перфоратора">
 
   <!-- Author -->
   <meta name="author" content="Toolmate">
