--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 <body>
   <header>
     <h1>Toolmate</h1>
-    <img class="logo" src="./assets/images/logo.jpg" alt="logo">
+    <img class="logo" src="./assets/images/logo.jpg" alt="Toolmate — сервіс оренди інструментів">
     <p>Оренда інструментів між людьми. Без посередників. Через Telegram.</p>
     <section class="section topbar">
         <div id="countdown-text">Запуск через...</div>
