--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="Cgm1GHNaoWAAyHS_VT9T3fKdr9k84sbNWzL71jQxgE0" />
-  <link rel="icon" type="image/png" href="./assets/images/icon.png">
+  <link rel="icon" type="image/png" href="https://toolmate.site/assets/images/icon.png">
 
   <!-- SEO Title -->
   <title>Toolmate — Оренда інструментів у твоєму місті</title>
