--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
       const remaining = releaseDate - now;
 
       if (remaining <= 0) {
-        countdownText.textContent = '🚀 Бот уже запущено!';
+        countdownText.textContent = '🚀 Бот уже деплоїться! Невдовзі можна буде реєструватися;)';
         progressBar.style.width = '100%';
         return;
       }
