--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             <div class="progress-bar" id="progress-bar"></div>
         </div>
     </section>
-    <span class="tooltip" data-tooltip="Буде доступний 20го червня">
+    <span class="tooltip" data-tooltip="Бот в тестовому режимі">
       <span class="btn disabled">Запустити бот</span>
     </span>
     <p style="margin-top: 1rem; font-size: 0.9rem;">Реліз — 20 червня • Перші 5 отримають бонуси</p>
@@ -263,7 +263,7 @@
       </script>
     </div>
     <br><br>
-    <span class="tooltip" data-tooltip="Буде доступний 20го червня">
+    <span class="tooltip" data-tooltip="Бот в тестовому режимі">
       <span class="btn disabled">Запустити бот</span>
     </span>
     <br><br>
@@ -296,7 +296,7 @@
       const remaining = releaseDate - now;
 
       if (remaining <= 0) {
-        countdownText.textContent = '🚀 Бот уже деплоїться! Невдовзі можна буде реєструватися;)';
+        countdownText.textContent = '🚀 Бот працює в тестовому режимі! Невдовзі кожен зможе спробувати;)';
         progressBar.style.width = '100%';
         return;
       }
