--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <meta name="twitter:description" content="Локальна оренда інструментів між людьми. Через Telegram. Без фейків.">
   <meta name="twitter:image" content="https://toolmate.site/assets/images/share.png">
   <link rel="canonical" href="https://toolmate.site/">
+  <link rel="stylesheet" href="/assets/styles/main.css">
 
   <meta name="robots" content="index, follow">
 </head>
