rewrite-rental-conditions

--- a/rental-conditions.html
+++ b/rental-conditions.html
@@ -1,109 +1,152 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="google-site-verification" content="Cgm1GHNaoWAAyHS_VT9T3fKdr9k84sbNWzL71jQxgE0" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="icon" type="image/png" href="https://toolmate.site/assets/images/icon.png">
+  <title>Toolmate — Умови оренди</title>
 
-  <title>Toolmate — Оренда інструментів у твоєму місті</title>
-
-  <meta name="description" content="Toolmate — здавай та орендуй інструменти просто. Без фейків, без посередників. Локально, через Telegram. Працює з 20 червня.">
-
-  <meta name="keywords" content="оренда інструментів, інструмент напрокат, взяти перфоратор, оренда інструменту Україна, Toolmate, телеграм оренда, оренда шуруповерта, оренда верстатів, інструмент Івано-Франківськ, оренда перфоратора">
-
-  <meta name="author" content="Toolmate">
-  <link rel="stylesheet" href="/assets/styles/main.css">
-
-  <meta property="og:title" content="Toolmate — Оренда інструментів">
-  <meta property="og:description" content="Платформа для оренди справжніх інструментів. Працює з 20 червня. Локально. Через Telegram.">
-  <meta property="og:image" content="https://toolmate.site/assets/images/share.png">
-  <meta property="og:url" content="https://toolmate.site/">
-  <meta property="og:type" content="website">
-  <meta property="og:locale" content="uk_UA">
-
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Toolmate — Оренда інструментів">
-  <meta name="twitter:description" content="Локальна оренда інструментів між людьми. Через Telegram. Без фейків.">
-  <meta name="twitter:image" content="https://toolmate.site/assets/images/share.png">
-  <link rel="canonical" href="https://toolmate.site/">
-
+  <meta name="description" content="Toolmate — локальна оренда інструментів між людьми через Telegram. Публічний договір-оферта умов оренди." />
   <meta name="robots" content="index, follow">
+  <link rel="stylesheet" href="/assets/styles/main.css">
 </head>
 <body>
-    <header>
-       <h1>ПОЛІТИКА КОНФІДЕНЦІЙНОСТІ</h1>
-       <img class="logo" src="./assets/images/logo.jpg" alt="Toolmate — сервіс оренди інструментів">
-       <P>
-            Умови оренди (Публічний договір-оферта)
-            Цей документ є офіційною публічною офертою (пропозицією) укласти договір 
-            оренди між будь-якою фізичною або юридичною особою (далі – Орендодавець або 
-            Орендар, залежно від обраної ролі) та адміністрацією сервісу TOOLMATE (далі – Сервіс), 
-            що діє від імені та в інтересах користувачів відповідно до положень Цивільного кодексу України.
-        </P>
-        <p>
-            Приймаючи ці умови, ви підтверджуєте, що ознайомлені з ними, розумієте їх та погоджуєтеся їх виконувати.
-        </p>
-    </header>
-    <section class="section">
-        <p>
-            <b>1. Терміни та визначення</b><br>
-            Сервіс — онлайн-платформа [назва проєкту], що надає користувачам можливість розміщувати оголошення про здачу в оренду або орендувати інструменти, обладнання та інші речі.<br>
-            Орендодавець — користувач, який надає річ в оренду.<br>
-            Орендар — користувач, який отримує річ в оренду.<br>
-            Договір оренди — правовідносини між Орендодавцем та Орендарем, що виникають після підтвердження обома сторонами умов передачі речі.<br>
-            Річ — інструмент або інше майно, доступне для оренди через Сервіс.<br>
-            Період оренди — узгоджений сторонами час, протягом якого річ перебуває в користуванні Орендаря.
-        </p>
-        <p>
-            <b>2. Предмет договору</b><br>
-            2.1. Орендодавець зобов’язується передати Орендареві у тимчасове користування річ, зазначену в оголошенні, а Орендар зобов’язується прийняти річ та сплатити орендну плату.<br>
-            2.2. Передача та повернення речі можуть фіксуватися шляхом сканування QR-коду, підписання акта приймання-передачі або іншим способом, погодженим сторонами.
-        </p>
-        <p> 
-            <b>3. Порядок укладення договору</b><br>
-            3.1. Розміщення оголошення в Сервісі є пропозицією укласти договір оренди.<br>
-            3.2. Заявка на оренду від Орендаря є акцептом (погодженням) умов оренди.<br>
-            3.3. Договір вважається укладеним після підтвердження Орендодавцем заявки Орендаря та узгодження всіх умов (строку, ціни, застави тощо).
-        </p>
-        <p>
-            <b>4. Права та обов’язки сторін</b><br>
-            Орендодавець зобов’язаний:<br>
-            — Надати річ у справному стані, придатному для використання.<br>
-            — Передати річ у строк, погоджений з Орендарем.<br>
-            — Повідомити про всі відомі дефекти чи особливості використання.<br>
-            — Орендодавець має право:<br>
-            — Вимагати заставу, якщо це передбачено умовами оголошення.<br>
-            — Отримати річ у належному стані після закінчення оренди.<br>
-            — Орендар зобов’язаний:<br>
-            — Використовувати річ за її цільовим призначенням.<br>
-            — Повернути річ у стані, в якому вона була отримана, з урахуванням нормального зносу.<br>
-            — Своєчасно сплатити орендну плату та інші погоджені платежі (заставу, штрафи тощо).<br>
-            — Орендар має право:<br>
-            — Отримати річ у стані, придатному для використання.<br>
-            — Вимагати заміни речі або розірвання договору у випадку виявлення істотних недоліків.<br>
-        </p>
-        <p>
-            <b>5. Орендна плата і розрахунки</b><br>
-            5.1. Розмір орендної плати визначається Орендодавцем у оголошенні та погоджується сторонами перед початком оренди.<br>
-            5.2. Оплата здійснюється через платіжні системи, інтегровані в Сервіс, або іншим способом, погодженим сторонами.
-        </p>
-        <p>
-            <b>6. Відповідальність сторін</b><br>
-            6.1. За пошкодження чи втрату речі Орендар несе матеріальну відповідальність у розмірі вартості ремонту або повної вартості речі.<br>
-            6.2. Орендодавець відповідає за приховані дефекти речі, про які не було повідомлено.<br>
-            6.3. Сервіс не є стороною договору оренди між користувачами та не несе відповідальності за дії чи бездіяльність користувачів.
-        </p>
-        <p>
-            <b>7. Форс-мажор</b><br>
-            Сторони звільняються від відповідальності за невиконання зобов’язань, якщо це сталося внаслідок обставин непереборної сили (війна, стихійні лиха, аварії тощо).
-        </p>
-        <p>
-            <b>8. Прикінцеві положення</b><br>
-            8.1. Цей договір є публічним та діє з моменту акцепту користувачем.<br>
-            8.2. Усі спори вирішуються шляхом переговорів, а в разі недосягнення згоди — у судовому порядку відповідно до чинного законодавства України.<br>
-            8.3. Розміщення оголошення або подача заявки на оренду через Сервіс підтверджує згоду з цими Умовами.
-        </p>
-    </section>
+<header>
+  <h1>
+    Умови оренди
+    <span>
+        <img src="/assets/images/clock.svg" alt="clock">
+        7 хв читання
+    </span>
+  </h1>
+  <img class="logo" src="./assets/images/logo.jpg" alt="Toolmate — сервіс оренди інструментів">
+  <p>
+    Цей документ є офіційною публічною офертою (пропозицією) укласти договір оренди між будь-якою дієздатною фізичною або юридичною особою
+    (надалі — «Орендодавець» або «Орендар», залежно від ролі) та адміністрацією сервісу Toolmate (надалі — «Сервіс»), що діє в інтересах
+    користувачів як платформа для комунікації та розміщення оголошень відповідно до Цивільного кодексу України.
+  </p>
+  <p>Приймаючи ці умови, ви підтверджуєте, що ознайомлені з ними, розумієте їх і зобов’язуєтесь їх дотримуватися.</p>
+  <p>
+    <small style="display: flex; align-items: center; justify-content: center;">
+        Дата набрання чинності:
+        <img style="width: 12px; height: 12px; margin: 0 4px 0 8px;" src="/assets/images/calendar_black.svg" alt="calendar">
+         09.09.2025
+    </small>
+  </p>
+</header>
+
+<section class="section">
+  <h2>1. Терміни та визначення</h2>
+  <p>
+    <b>Сервіс</b> — онлайн-платформа Toolmate (зокрема Telegram-бот та веб-сайт), що надає технічну можливість розміщувати оголошення, знаходити інструменти для оренди та комунікувати між користувачами.<br>
+    <b>Орендодавець</b> — користувач, який надає річ в оренду.<br>
+    <b>Орендар</b> — користувач, який отримує річ в оренду.<br>
+    <b>Річ</b> — інструмент або інше майно, доступне для оренди через Сервіс.<br>
+    <b>Період оренди</b> — узгоджений сторонами час, протягом якого річ перебуває у користуванні Орендаря.<br>
+    <b>Застава</b> — грошова сума або інше забезпечення виконання зобов’язань Орендаря, якщо сторони це передбачили.
+  </p>
+
+  <h2>2. Предмет договору</h2>
+  <p>
+    2.1. Орендодавець передає Орендареві річ у тимчасове користування, а Орендар приймає річ і сплачує орендну плату та (за наявності) заставу на узгоджених умовах.<br>
+    2.2. Передача та повернення речі фіксуються сторонами будь-яким зручним способом: листуванням у Telegram (скріни/повідомлення з датою й часом), фото/відео-фіксацією стану речі під час передачі/повернення, складенням акта приймання-передачі (за бажанням сторін) чи підтвердженням у боті, якщо така функція доступна.<br>
+    2.3. Сервіс не є стороною договору оренди між Орендодавцем і Орендарем; він лише надає технічні інструменти для комунікації й пошуку оголошень.
+  </p>
+
+  <h2>3. Порядок укладення договору</h2>
+  <p>
+    3.1. Розміщення оголошення — оферта Орендодавця укласти договір оренди на викладених в оголошенні умовах.<br>
+    3.2. Заявка Орендаря — акцепт оферти. Договір вважається укладеним після підтвердження заявки Орендодавцем та погодження сторонами істотних умов (строк, ціна, застава, місце/час передачі).<br>
+    3.3. Рекомендується до передачі речі узгодити чек-лист: комплектація, видимі дефекти/знос, витратні матеріали, правила безпеки, спосіб і час повернення.
+  </p>
+
+  <h2>4. Права та обов’язки сторін</h2>
+  <p>
+    <b>Орендодавець зобов’язаний:</b><br>
+    — Надати річ у справному стані, придатному для використання за цільовим призначенням.<br>
+    — Повідомити про відомі дефекти, умови безпечної експлуатації та будь-які обмеження (наприклад, заборона роботи під дощем тощо).<br>
+    — Передати річ у погоджений час і місце з повною комплектацією, зазначеною в оголошенні/листуванні.
+  </p>
+  <p>
+    <b>Орендодавець має право:</b><br>
+    — Вимагати заставу як забезпечення зобов’язань Орендаря (якщо це вказано в оголошенні або узгоджено окремо).<br>
+    — Отримати річ у належному стані після закінчення оренди з урахуванням нормального зносу.
+  </p>
+  <p>
+    <b>Орендар зобов’язаний:</b><br>
+    — Використовувати річ лише за призначенням, дотримуючись інструкцій і правил безпеки.<br>
+    — Не передавати річ третім особам без явної згоди Орендодавця.<br>
+    — Повернути річ у погоджений строк у стані, в якому вона була отримана, з урахуванням нормального зносу, разом з усією комплектацією.<br>
+    — Своєчасно сплатити орендну плату, заставу (якщо передбачено) та погоджені штрафи/компенсації (за потреби).
+  </p>
+  <p>
+    <b>Орендар має право:</b><br>
+    — Отримати річ у стані, придатному для використання; у разі істотних недоліків вимагати заміни речі або розірвання договору з поверненням сплачених сум (якщо інше не погоджено сторонами).
+  </p>
+
+  <h2>5. Розрахунки</h2>
+  <p>
+    5.1. Розмір орендної плати визначається Орендодавцем у оголошенні та погоджується до передачі речі.<br>
+    5.2. Оплата оренди та передача/повернення застави здійснюються напряму між сторонами у спосіб, узгоджений сторонами (готівка/безготівково). Сервіс не приймає і не зберігає орендні платежі чи заставу між користувачами.<br>
+    5.3. Окремі платежі за користування Сервісом (наприклад, за розміщення оголошень) не є орендною платою та сплачуються за правилами, викладеними у відповідних розділах Сервісу.
+  </p>
+
+  <h2>6. Ідентифікація та обмін даними у спірних випадках</h2>
+  <p>
+    6.1. У разі підозри крадіжки/привласнення речі, умисного пошкодження, відмови безпідставно повертати заставу або інших істотних порушень, за запитом потерпілої сторони інша сторона зобов’язується надати ідентифікаційні дані в обсязі, достатньому для захисту прав і звернення до уповноважених органів: ПІБ, номер мобільного, місто проживання, а також реквізити документа, що посвідчує особу, або РНОКПП (за взаємною згодою — копії/фото з маскуванням частини номерів).<br>
+    6.2. Обмін такими даними здійснюється напряму між сторонами виключно з метою врегулювання спору та/або подання заяви до правоохоронних органів. Сторони зобов’язуються не використовувати отримані дані з іншою метою та забезпечувати їх конфіденційність.<br>
+    6.3. Сервіс може надавати технічні дані (ідентифікатори акаунтів, журнали системних подій) лише на підставі належної правової вимоги згідно із законодавством.
+  </p>
+
+  <h2>7. Відповідальність сторін</h2>
+  <p>
+    7.1. Орендар несе матеріальну відповідальність за пошкодження або втрату речі в межах фактичних збитків (ремонт, відновлення, у разі повної втрати — ринкова вартість).<br>
+    7.2. Орендодавець відповідає за приховані недоліки, про які йому було відомо та про які не повідомлено Орендаря до передачі речі.<br>
+    7.3. Сторони самостійно фіксують стан речі при передачі/поверненні (фото/відео), що використовується як доказова база у випадку спору.
+  </p>
+
+  <h2>8. Обмеження та відмова від відповідальності Сервісу</h2>
+  <p>Сервіс не є стороною договору оренди та не виступає посередником, зберігачем, страховиком, гарантом чи довіреною особою користувачів. Сервіс не несе відповідальності, зокрема, за такі випадки:</p>
+  <ul>
+    <li>Будь-які грошові розрахунки, у т.ч. внесення/повернення застави, що здійснюються напряму між користувачами.</li>
+    <li>Крадіжка, втрата чи пошкодження речі, а також неповернення речі/застави; шахрайські дії будь-якої із сторін.</li>
+    <li>Достовірність, повнота та актуальність інформації в оголошеннях і профілях користувачів; право власності Орендодавця на річ.</li>
+    <li>Якість, безпечність та придатність речі, якщо сторони погодили передачу попри зауваження або без проведення належної перевірки.</li>
+    <li>Особиста безпека сторін під час зустрічей; вибір місця/часу зустрічі та способу доставки речі.</li>
+    <li>Перебої у роботі Telegram, платіжних сервісів третіх сторін, мобільних мереж чи інтернет-провайдерів.</li>
+    <li>Непрямі, випадкові, штрафні збитки та втрачена вигода користувачів.</li>
+    <li>Контент користувачів (у т.ч. фото, описи, відгуки); порушення прав третіх осіб, допущені користувачами.</li>
+    <li>Технічні збої, тимчасова недоступність Сервісу, втрата або пошкодження даних з причин поза розумним контролем Сервісу.</li>
+  </ul>
+  <p>
+    8.1. Сукупна відповідальність Сервісу (якщо така виникне) обмежується сумою фактично сплачених користувачем платежів за платні послуги Сервісу за останні 3 місяці, і лише у випадках, коли шкода прямо спричинена діями/бездіяльністю Сервісу.<br>
+    8.2. Сервіс залишає за собою право модерувати та видаляти оголошення/акаунти, що порушують правила, без компенсацій.
+  </p>
+
+  <h2>9. Врегулювання спорів</h2>
+  <p>
+    9.1. Рекомендується протягом 24 годин з моменту виникнення спірної ситуації спробувати врегулювати її шляхом переговорів і обміну доказами (фото/відео, листування).<br>
+    9.2. Якщо спір не врегульовано, сторонам слід звертатися до правоохоронних органів або суду за місцем вчинення правопорушення чи проживанням відповідача. Сторони надають одна одній ідентифікаційні дані згідно з розділом 6.<br>
+    9.3. Сервіс може надавати інформацію, якою розпоряджається, лише на законну вимогу уповноважених органів.
+  </p>
+
+  <h2>10. Персональні дані</h2>
+  <p>
+    10.1. Використовуючи Сервіс, ви надаєте згоду на обробку своїх персональних даних з метою функціонування Сервісу, комунікації та безпеки користувачів відповідно до чинного законодавства України.<br>
+    10.2. Сервіс не зберігає копії документів, якими користувачі обмінюються між собою, і не несе відповідальності за порядок обробки персональних даних між користувачами при врегулюванні спорів; користувачі зобов’язані забезпечувати конфіденційність отриманих даних і використовувати їх лише з легітимною метою (розділ 6).
+  </p>
+
+  <h2>11. Форс-мажор</h2>
+  <p>
+    Сторони та Сервіс звільняються від відповідальності за невиконання зобов’язань унаслідок обставин непереборної сили (збройний конфлікт, надзвичайний стан, стихійні лиха, аварії, перебої у роботі критичної інфраструктури тощо), що належним чином підтверджено.
+  </p>
+
+  <h2>12. Прикінцеві положення</h2>
+  <p>
+    12.1. Ці Умови є публічною офертою та діють з моменту їх акцепту користувачем (використання Сервісу/створення облікового запису/подання заявки).<br>
+    12.2. Сервіс може змінювати Умови в односторонньому порядку шляхом публікації оновленої редакції. Продовження користування Сервісом після оновлення означає згоду з новою редакцією.<br>
+    12.3. Усе, що прямо не врегульовано цими Умовами, тлумачиться відповідно до чинного законодавства України.
+  </p>
+</section>
 </body>
 </html>
